# python-capi-sdk

./: .gitignore  CHANGELOG.md  README.md  default.env  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: doc-links.yml  keepalive.yml  linter.yml  markdown.yml  mongodb-storage.yml  pypi_publish.yml  release.yml  sql-storage.yml  unittests.yml
docs/: DEVELOPER.md  INSTALLATION_GUIDE.md  USER_GUIDE.md
examples/: basic.py  enroll.py  main.py  prune_failing_machines_signals.py  send_signal.py
examples/shell_scripts/: add_signal.py  enroll.py  prune_failing_machines_signals.py  send_signal.py
src/cscapi/: client.py  mongodb_storage.py  sql_storage.py  storage.py  utils.py
tests/: test_client.py  test_mongodb_storage.py  test_sql_storage.py
